[package]
name = "aoc"
version = "0.1.0"
authors = ["Chris Vittal <christopher.vittal@gmail.com>"]
description = "Solutions to Advent of Code 2017"
license = "MIT"

[dependencies]
regex = "0.2"
libc = "0.2"
serde = "1"
serde_derive = "1"
lazy_static = "1"
num = "0.1"
petgraph = "0.4"
itertools = "0.7"
bit-vec = "*"

[profile.release]
lto = true
